python-oslo.vmware (0.3-1) unstable; urgency=medium

  [ Thomas Bechtold ]
  * debian/watch: Use github tags.

  [ Thomas Goirand ]
  * New upstream release.
  * Uploading to unstable.
  * Fixed UPSTREAM_GIT url in debian/rules.
  * Fixed new (build-)requirements for this release.

 -- Thomas Goirand <zigo@debian.org>  Fri, 18 Apr 2014 05:45:49 +0000

python-oslo.vmware (0.2-1) experimental; urgency=low

  * Initial release. (Closes: #740806)

 -- Thomas Goirand <zigo@debian.org>  Wed, 05 Mar 2014 15:29:17 +0800