@@ -8,6 +8,7 @@ python-oslo.vmware (0.3-1) unstable; urgency=medium
   * Uploading to unstable.
   * Fixed UPSTREAM_GIT url in debian/rules.
   * Fixed new (build-)requirements for this release.
+  * Using testr and subunit properly.
 
  -- Thomas Goirand <zigo@debian.org>  Fri, 18 Apr 2014 05:45:49 +0000
 
